--- a/miniprogram/pages/voice/recorder.wxss
+++ b/miniprogram/pages/voice/recorder.wxss
@@ -1,4 +1,55 @@
 /* pages/notes/recorder.wxss */
+.result{
+  line-height: 150rpx;
+  width: 660rpx;
+  text-align: center;
+  padding:25rpx;
+  margin:25rpx;
+  float: left;
+  font-size:26rpx;
+  margin-top:10rpx;
+}
+.recorder{
+  float: left;
+  position: relative;
+  bottom: 10%;
+  left:0rpx;
+  width: 750rpx;
+  height: 200rpx;
+  display: flex;
+  align-items: center;
+  justify-items: center;
+  flex-direction: column;
+  z-index: 100;
+}
+
+.recorder>image{
+  width: 130rpx;
+  height: 200rpx;
+  padding: 0rpx;
+  margin-bottom: 40rpx;
+  border-radius: 100rpx;
+  float: left;
+  box-shadow: 1rpx 1rpx 2rpx gainsboro;
+}
+
+.recorder>image:active{
+  opacity: 0.7;
+  transform: scale(0.5);
+  box-shadow: 0rpx 0rpx 0rpx gainsboro;
+  background-color: rgba(0,0,0,0.97);
+}
+.recorder>tips {
+  text-align: center;
+  position: absolute;
+  bottom: 200rpx;
+  left: 0;
+  right: 0;
+  margin: 0 auto;
+  color: rgba(0, 0, 0, 0.6);
+  font-size: 1.2rem;
+}
+
 .sound-style{
   position: absolute;
   width: 200rpx;
