录音文件内容上传

--- a/miniprogram/pages/index/index.wxml
+++ b/miniprogram/pages/index/index.wxml
@@ -1,13 +1,19 @@
 <view>这是云测试界面</view>
-<button type="primary" bindtap="getData"> 获取云数据列表</button>
+<button type="primary" bindtap="getData"> 获取云笔记数据列表</button>
 <view wx:for="{{dataObj}}">
   <view>标题：{{item.title}}</view>
   <view>作者：{{item.author}}</view>
   <view>阅读人数：{{item.readcount}}</view>
 </view>
 --------------
+<button type="primary" bindtap="getRecordData"> 获取云笔记历史录音文字数据</button>
+<view wx:for="{{dataObj}}">
+  <view>录音转文字时间：{{item.recordtime}}</view>
+  <view>录音转文字内容：{{item.recordcontent}}</view>
+</view>
+--------------
 <button type="primary" bindtap="goEditor">添加和编辑云笔记</button>
 --------------
-<button type="primary" bindtap="goRichEditor">富文本云笔记编辑</button>
+<button type="primary" bindtap="goRichEditor">HTNL解析界面</button>
 --------------
 <button type="primary" bindtap="goRecorder">录音和识别</button>
