--- a/miniprogram/pages/index/index.wxss
+++ b/miniprogram/pages/index/index.wxss
@@ -1,1 +1,3 @@
 input,textarea{border:1px solid #8888;}
+.scolly{height: 300px;}
+.scrbox{width: 100%;height: 80px;background:green;margin-bottom: 1px;}
