--- a/miniprogram/pages/notes/editor.wxml
+++ b/miniprogram/pages/notes/editor.wxml
@@ -2,8 +2,8 @@
 <view class="page eidt-detail-images-container">
   <view class="ajc">
   <view class="title">云笔记编辑界面</view>
-  <input type="text" name="title" value="123" placeholder="请输入云笔记的标题" bindinput="getTitle"></input>
-  <input type="text" name="content" value="123" placeholder="请输入云笔记摘要" bindinput="getContent"></input>
+  <input type="text" name=title" value='{{title}}' placeholder="请输入云笔记的标题" bindinput="getTitle"></input>
+  <input type="text" name="content" value='{{content}}' placeholder="请输入云笔记摘要" bindinput="getContent"></input>
   <view class="title">云笔记图文编辑</view>
   </view>
   <view>
@@ -46,7 +46,7 @@
         <i class="iconfont icon-shanchu" bindtap="clear"></i>
         <i class="iconfont icon-direction-rtl {{formats.direction === 'rtl' ? 'ql-active' : ''}}" data-name="direction" data-value="rtl"></i>
       </view>
-      <editor id="editor" class="ql-container" placeholder="{{placeholder}}" showImgSize showImgToolbar showImgResize bindstatuschange="onStatusChange" read-only="{{readOnly}}" bindready="onEditorReady"></editor>
+      <editor id="editor" class="ql-container" value='{{html}}' placeholder="{{placeholder}}" showImgSize showImgToolbar showImgResize bindstatuschange="onStatusChange" read-only="{{readOnly}}" bindready="onEditorReady"></editor>
     </view>
   </view>
   <view class="ajc" style="margin:10px;">
