--- a/miniprogram/pages/voice/recorder.wxml
+++ b/miniprogram/pages/voice/recorder.wxml
@@ -1,6 +1,5 @@
-<view>录音识别测试界面：</view>
+<view>录音识别界面：</view>
 <text class="result">录音识别结果:{{result}}</text>
-
 <view class="recorder"
 bindtouchstart="start_record"
 bindtouchend="stop_record"> 
@@ -10,15 +9,3 @@ bindtouchend="stop_record">
 <view class="recorder" wx:if="{{isSpeaking}}">
 <image src="../../images/recorder.gif" style="width:130rpx;height:130rpx" />
 </view>
-
-
-<!-- <view wx:if="{{isSpeaking}}">
-  <image class="sound-style" src= "../../images/recorder.gif"
-  style="position: absolute; left: 158rpx; top: -58rpx; width: 218rpx; height: 154rpx; display: block; box-sizing: border-box">
-  </image>
-</view> -->
-
-<!-- <button class="button-style" type="primary" bindtap='openRecording' style="top: 286rpx">开始录音测试</button>
-<button class="button-style" type="primary" bindtap='shutRecording' style="top: 292rpx">结束录音测试</button>
-<button  class="button-style"  bindtap="audioPause" style="top: 348rpx">暂停</button>
-<button  class="button-style" bindtap="audioRestart" style="top: 376rpx">重新开始播放</button> -->
